# SlicerANTs

./: CMakeLists.txt  README.md
ANTSRegistration/: ANTSRegistration.py  CMakeLists.txt
ANTSRegistration/Resources/UI/: ANTSRegistration.ui
ANTsRegistration/: ANTsRegistration.py  CMakeLists.txt
ANTsRegistration/Resources/Presets/: QuickSyN.json  Rigid+Affine.json  Rigid.json
ANTsRegistration/Resources/UI/: ANTsRegistration.ui
ITKANTsCommon/: CMakeLists.txt  ITKANTsCommon.py
